WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
41007
[EFL] Stop frame loaders when deleting view
https://bugs.webkit.org/show_bug.cgi?id=41007
Summary
[EFL] Stop frame loaders when deleting view
Lucas De Marchi
Reported
2010-06-22 13:04:59 PDT
[EFL] Stop frame loaders when deleting view
Attachments
Patch
(1.17 KB, patch)
2010-06-22 13:06 PDT
,
Lucas De Marchi
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Lucas De Marchi
Comment 1
2010-06-22 13:06:28 PDT
Created
attachment 59408
[details]
Patch
Kenneth Rohde Christiansen
Comment 2
2010-06-23 12:57:03 PDT
Comment on
attachment 59408
[details]
Patch WebKit/ChangeLog:7 + segmentation fault when libsoup had something to deliver yet. still had something to deliver but fine, r=me
WebKit Commit Bot
Comment 3
2010-06-25 09:20:22 PDT
Comment on
attachment 59408
[details]
Patch Clearing flags on attachment: 59408 Committed
r61867
: <
http://trac.webkit.org/changeset/61867
>
WebKit Commit Bot
Comment 4
2010-06-25 09:20:26 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug