2010-06-25  Lucas De Marchi  <lucas.demarchi@profusion.mobi>

Reviewed by Kenneth Rohde Christiansen.

        [EFL] Stop frame loaders when deleting view.
        Frame loaders were still alive after view is deleted, causing
        segmentation fault when libsoup had something to deliver yet.
        https://bugs.webkit.org/show_bug.cgi?id=41007

        * efl/ewk/ewk_view.cpp:
        (_ewk_view_smart_del): stop loaders.

Canonical link: https://commits.webkit.org/52867@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@61867 268f45cc-cd09-0410-ab3c-d52691b4dbfc